--- a/index.qmd
+++ b/index.qmd
@@ -75,6 +75,7 @@ library(dplyr)
 library(tidyr)
 library(xml2)
 library(tibble)
+library(readr)
 ```
 
 ```{r}
@@ -234,7 +235,7 @@ Find a function that will provide coordinates for each text component, and write
 > The function that I think will work best here is pdf_data, which would give me a large list containing coordinates and other information for each page.
 >
 > 1.  Starting with a large list, I would convert this to a table using bind_rows
-> 2.  Group by page number (number of nested list that each group came from)
+> 2.  Group by page number (I can narrow down the relavent pages by checking the pdfs)
 > 3.  All the information we need will be in the "text" variable, so we need to reformat that variable
 >     1.  Pick out preset headers, maybe a new T/F column for if the observation is a header
 >     2.  Divide the other observations (not headers) by x-coordinate, which should theoretically create groups based on their visual indentation, so if header = false, then assign the observation to a new variable group based on different ranges of x-coordinates
@@ -259,9 +260,52 @@ Your plots must include appropriate titles and legends, and be well constructed 
 ------------------------------------------------------------------------
 
 ```{r} 
-data <- pdf_data("pdf_files/unl-department-budget-2025-2026.pdf")
+data_list <- map(files, pdf_data)
 
-df <- bind_rows(data, .id = "page")
+#page check -> 104/105, 110/111, 110/111, 105/106
+#I know this is not the most efficient way to do this, I'm tired
+df1 <- bind_rows(data_list[1], .id = "page") %>%
+    filter(page %in% c(104, 105)) %>%
+    mutate(id = 1)
+df2 <- bind_rows(data_list[3], .id = "page") %>%
+    filter(page %in% c(110, 111)) %>%
+    mutate(id = 2)
+df3 <- bind_rows(data_list[4], .id = "page") %>%
+    filter(page %in% c(110, 111)) %>%
+    mutate(id = 3)
+df4 <- bind_rows(data_list[5], .id = "page") %>%
+    filter(page %in% c(105, 106)) %>%
+    mutate(id = 4)
+
+classics_pages <- bind_rows(df1, df2, df3, df4, .id = NULL)
+
+classics_lines <- classics_pages %>%
+  group_by(id, page, y) %>% #group by line, or observations with the same y
+  summarise(line = paste(text, collapse = " "), .groups = "drop")
+
+
+classics_dpt <- classics_lines %>%
+  filter(str_detect(line, "\\d{1,3}(?:,\\d{3})+")) %>% #numeric that have commas, like 210,010
+  mutate(
+      salary_text = str_extract(line, "\\d{1,3}(?:,\\d{3})+"),
+      salary = parse_number(salary_text),
+      name = str_extract(line, "[A-Z][A-Za-z'\\-]+,\\s+[A-Z][A-Za-z\\.\\s\\-]{1,60}"),
+      title = str_extract(line,
+       "(?i)\\b(Professor|Associate Professor|Graduate Teaching Asst|Chairperson|Student Worker|Assistant Professor| Assistant Professor of Practice|Associate Professor of Practice|Sr. Lecturer|Staff Secy III )\\b")
+  ) #found these manually bc I couldn't figure it out
+#issue write now is dealing with subtotals/multiple rows for each faculty
+
+classics_dpt <- classics_dpt %>%
+  group_by(name) %>%
+  mutate(title = if_else(all(is.na(title)), 
+                         NA_character_, first(na.omit(title)))) %>%   #fill titles for people w multiple rows
+  ungroup()
+
+people_salaries <- classics_dpt %>%
+    filter(str_detect(line, "TOTAL")) %>%
+    na.omit(name)
+
+#very unfinished
 ```
 
 ------------------------------------------------------------------------
@@ -276,4 +320,4 @@ If you were to process the full set of faculty salary data across all department
 
 ------------------------------------------------------------------------
 
-> Your answer and explanation
+I noticed an issue with the first pdf (2010-2011) where the page numbers on the pdf display versus the preview software were not the same, which caused me to pull the wrong pages initially.
